--- a/index.html
+++ b/index.html
@@ -16,30 +16,31 @@
 <body class="font-poppins">
     <main class="min-h-screen bg-[#010313] bg-[url(images/background.png)] bg-no-repeat bg-center">
         <!-- home screen -->
-        <section id="home-screen" class="min-h-screen text-white flex justify-center items-center">
+        <section id="home-screen" class="flex items-center justify-center min-h-screen text-white">
             <div class="flex flex-col items-center gap-10">
-                <h1 class="text-8xl font-anton uppercase">Alpha Clash</h1>
+                <h1 class="uppercase text-8xl font-anton">Alpha Clash</h1>
                 <p>Unleash Your Keyboard Kun g Fu : Press “Enter” to Play</p>
-                <button onclick="play()" class="btn bg-white text-black">Play Now</button>
+                <button onclick="play()" class="text-black bg-white btn">Play Now</button>
             </div>
         </section>
         <!-- playground start-->
         <section id="play-ground" class="hidden">
             <div class="flex flex-col items-center gap-20 pt-20">
                 <!-- screen -->
+                 
                 <div
                     class="artboard artboard-horizontal phone-6 border-[20px] rounded-2xl border-[#010313CC] bg-[#FFFFFFB3]">
                     <div class="flex justify-center">
-                        <p class="bg-[#2F2941] px-6 pb-4 rounded-b-xl text-white">Don't watch keyboard while playing...
+                        <p class="bg-[#2F2941] px-6 pb-4 rounded-b-xl text-white">Don't watch keyboard while playing.....
                         </p>
                     </div>
-                    <div class="flex justify-center items-center h-full">
-                        <p id="current-alphabet" class="text-black text-9xl font-bold uppercase">Y</p>
+                    <div class="flex items-center justify-center h-full">
+                        <p id="current-alphabet" class="font-bold text-black uppercase text-9xl">Y</p>
                     </div>
                 </div>
                 <!-- keyboard start-->
                 <div>
-                    <div class="flex justify-center gap-1 my-1 w-full">
+                    <div class="flex justify-center w-full gap-1 my-1">
                         <kbd id="q" class="kbd">q</kbd>
                         <kbd id="w" class="kbd">w</kbd>
                         <kbd id="e" class="kbd">e</kbd>
@@ -51,7 +52,7 @@
                         <kbd id="o" class="kbd">o</kbd>
                         <kbd id="p" class="kbd">p</kbd>
                     </div>
-                    <div class="flex justify-center gap-1 my-1 w-full">
+                    <div class="flex justify-center w-full gap-1 my-1">
                         <kbd id="a" class="kbd">a</kbd>
                         <kbd id="s" class="kbd">s</kbd>
                         <kbd id="d" class="kbd">d</kbd>
@@ -62,7 +63,7 @@
                         <kbd id="k" class="kbd">k</kbd>
                         <kbd id="l" class="kbd">l</kbd>
                     </div>
-                    <div class="flex justify-center gap-1 my-1 w-full">
+                    <div class="flex justify-center w-full gap-1 my-1">
                         <kbd id="z" class="kbd">z</kbd>
                         <kbd id="x" class="kbd">x</kbd>
                         <kbd id="c" class="kbd">c</kbd>
@@ -77,13 +78,13 @@
                 <!-- life score -->
                 <div class="flex justify-between w-3/4">
                     <!-- display Life -->
-                    <button class="btn rounded-full bg-purple-500 text-white px-4">
+                    <button class="px-4 text-white bg-purple-500 rounded-full btn">
                         Life
                         <img src="images/heart.svg" alt="">
                         <span id="current-life">5</span>
                     </button>
                     <!-- display Score -->
-                    <button class="btn rounded-full bg-purple-700 text-white px-4">
+                    <button class="px-4 text-white bg-purple-700 rounded-full btn">
                         Score
                         <img src="images/dollar.svg" alt="">
                         <span id="current-score">0</span>
@@ -94,7 +95,7 @@
         </section>
         <!-- playground end -->
         <!-- final Score start -->
-        <section id="final-score" class="flex justify-center items-center min-h-screen hidden">
+        <section id="final-score" class="flex items-center justify-center hidden min-h-screen">
             <div class="text-white text-center space-y-6 bg-[#FFFFFF33] p-4 rounded-lg">
                 <h4 class="text-3xl">Game Over !</h4>
                 <h1 class="text-8xl">
